# connect4

./: .cmake-options  .gitignore  CMakeLists.txt  README.md  generate_coverage.sh
.github/workflows/: cmake-single-platform.yml
src/: GameManager.cpp  GameManager.h  Grid.cpp  Grid.h  Player.cpp  Player.h  main.cpp
tests/: GameManager.cpp  GridTest.cpp  PlayerTest.cpp
